# my-test-code

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  link_test  link_test.md  link_test.sh  main.c  main2.c  makefile  mylib1.c  mylib2.c  mylib2.h  mylib3.c  mylib3.h  test_clang.sh  test_normal  test_optimized  test_size.sh
20210830/: build.sh  fun_sign.cpp  fun_sign_test.sh  link_test.md  link_test.sh  link_test2.sh  main  main_clang.bc  main_clang.c  main_clang.ll  mylib2.c  test.sh
C++/001/: main  main.cpp  test.sh
C++/002/: main  main.cpp
C++/003/: main
C++/004/: CMakeLists.txt  main  test.sh
C++/005/: main
C++/006/: main
C++/007/: main
C++/008/: main
C++/009/: main  main.cpp
C++/010/: main  main.cpp
C++/011/: main
C++/012/: main  main.cpp
C++/013/: main  main.cpp  test.sh
arm_dot/: CMakeLists.txt  a.out  build_ndk.sh  main.c  test.sh  test_dot.sh
bazel_stage3/: .gitignore  New_Project.cdproj  bazel-bazel_stage3  bazel-bin  bazel-out  bazel-stage3  bazel-testlogs  callgraph.dot  callgraph2.dot  compile_commands.json  debug_build.sh  generate_compile_commands.py  hello-world.ll  linux-sandbox_fake  test.sh
c++学习/c++01/: main  main.cpp
c++学习/c++02/: main  main.cpp
c++学习/c++03/: main  test  test.cpp
cplusplus/02/: main  main.cpp
cplusplus/03/: main
cplusplus/04/: main  main.cpp
cplusplus/05/: main
elf格式解析/: foo.c  symbol.c  test.sh  weak.c
linux_c_lib/: a.c  a.out  main.c
memory/: Android.mk  Application.mk  CMakeLists.txt  anc_error.h  anc_log.c  anc_log.h  anc_memory.c  anc_memory.h  anc_memory_debug.c  anc_memory_debug.h  anc_memory_wrapper.c  anc_memory_wrapper.h  anc_time.c  anc_time.h  anc_type.h  build.sh  build_android.sh  build_ndk.sh  main.c  main.c_bak  main.cpp  wrap.sh
python/LearnPython01/: LearnPython01.ipynb  test.py  zuoye1.py
python/LearnPython02/: 1117-1.6k.csv  hello.py  pandas_test.py  ptl_test.py  q-1212-11.csv  q-1214-11-produce.csv  sql_test.py  test.ipynb
sdk_bak/: CMakeLists.txt  memory_new.cpp  ndk_build.sh
sdk_makefile_test/: Makefile.flags  MyIn.cpp  MyIn.h  MyLib.cpp  MyLib.h  a.out  build.sh  link-ia.ld  link-merge.ld  main.c  makefile  makefile编译过程.md  mylib1.h  mylib2.c  mylib2.h  sec_marker_defs.h  test  test.sh  test2
sdk_makefile_test/elfmanip/: .gitignore  Makefile  fix_init_fini.cpp  fix_init_fini.sh  mangle_sym.py  prepare_merge.cpp  prepare_merge.sh
test/: a.out  debug_build.sh  finger_trace.py  getFiles  getFiles.c  getFiles.cpp  test.c  testSecondarypointer.c  test_rec_p.c  test_sizeof.c
test_promise/: CMakeLists.txt  main  main.cpp  test.sh
test_vsnprintf/: main  main.c
弱引用/: README.md
弱引用/c/: a.c  b.c  main.c  (+2 more)
性能分析/: callgrind.out.1079333  gprof.sh  main.out  valgrind.sh
返回数据/: a.out  main.c
(+34 files in other folders)
